# huione-anchor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  version-bump.sh
avm/: Cargo.toml
avm/src/: lib.rs
cli/: Cargo.toml
cli/npm-package/: anchor.js  package.json
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: main.rs
client/src/: cluster.rs  lib.rs
docker/: Makefile
docs/src/: index.md
docs/src/.vuepress/: config.js
docs/src/cli/: commands.md
docs/src/getting-started/: installation.md  introduction.md  projects.md  publishing.md  verification.md
docs/src/tutorials/: tutorial-0.md  tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md
examples/tutorial/: package.json
examples/tutorial/basic-0/: Anchor.toml  client.js  package.json
examples/tutorial/basic-0/programs/basic-0/: Cargo.toml
examples/tutorial/basic-0/programs/basic-0/src/: lib.rs
examples/tutorial/basic-0/tests/: basic-0.js
examples/tutorial/basic-1/: Anchor.toml  package.json
examples/tutorial/basic-1/programs/basic-1/: Cargo.toml
examples/tutorial/basic-1/programs/basic-1/src/: lib.rs
examples/tutorial/basic-1/tests/: basic-1.js
examples/tutorial/basic-2/: Anchor.toml  package.json
examples/tutorial/basic-2/programs/basic-2/: Cargo.toml
examples/tutorial/basic-2/programs/basic-2/src/: lib.rs
examples/tutorial/basic-2/tests/: basic-2.js
examples/tutorial/basic-3/: Anchor.toml  package.json
examples/tutorial/basic-3/programs/puppet/: Cargo.toml
examples/tutorial/basic-3/programs/puppet-master/: Cargo.toml
examples/tutorial/basic-3/programs/puppet-master/src/: lib.rs
examples/tutorial/basic-3/programs/puppet/src/: lib.rs
examples/tutorial/basic-3/tests/: basic-3.js
examples/tutorial/basic-4/: Anchor.toml  package.json
examples/tutorial/basic-4/programs/basic-4/: Cargo.toml
examples/tutorial/basic-4/programs/basic-4/src/: lib.rs
examples/tutorial/basic-4/tests/: basic-4.js
hpl/: Cargo.toml
hpl/src/: associated_token.rs  dex.rs  governance.rs  mint.rs  shmem.rs  token.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/access-control/src/: lib.rs
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/interface/: Cargo.toml
lang/attribute/interface/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/state/: Cargo.toml
lang/attribute/state/src/: lib.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/src/: account_meta.rs  bpf_upgradeable_state.rs  bpf_writer.rs  common.rs  context.rs  ctor.rs  error.rs  idl.rs  lib.rs  system_program.rs  vec.rs
lang/src/accounts/: account.rs  account_info.rs  account_loader.rs  boxed.rs  cpi_account.rs  cpi_state.rs  loader.rs  program.rs  program_account.rs  signer.rs  state.rs  system_account.rs  sysvar.rs  unchecked_account.rs
lang/syn/: Cargo.toml
lang/syn/src/: hash.rs  lib.rs
lang/syn/src/codegen/: error.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  constraints.rs  exit.rs  to_account_infos.rs  to_account_metas.rs  try_accounts.rs
lang/syn/src/codegen/program/: cpi.rs  dispatch.rs  entry.rs  handlers.rs  instruction.rs
lang/syn/src/idl/: file.rs  pda.rs
lang/syn/src/parser/accounts/: constraints.rs  mod.rs
lang/tests/: generics_test.rs
ts/: README.md  package.json  rollup.config.ts  tsconfig.base.json
ts/src/: error.ts  idl.ts  index.ts  nodewallet.ts  provider.ts  workspace.ts
ts/src/coder/: index.ts
ts/src/coder/borsh/: idl.ts  instruction.ts
ts/src/coder/hpl-token/: accounts.ts  buffer-layout.ts  events.ts  index.ts  instruction.ts  state.ts
ts/src/hpl/: index.ts  token.ts
ts/src/program/: accounts-resolver.ts  common.ts  context.ts  event.ts  index.ts
ts/src/program/namespace/: account.ts  index.ts  instruction.ts  methods.ts  rpc.ts  simulate.ts  state.ts  transaction.ts  types.ts  views.ts
ts/src/utils/: pubkey.ts  registry.ts  rpc.ts  token.ts
ts/tests/: events.spec.ts  program-common.spec.ts  token.spec.ts  transaction.spec.ts
