[package]
name = "huione-anchor-cli"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
rust-version = "1.68.0"
edition = "2021"

[[bin]]
name = "huione-anchor"
path = "src/bin/main.rs"

[features]
dev = []
default = []

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
huione-anchor-lang = { path = "../lang" }
huione-anchor-client = { path = "../client" }
huione-anchor-syn = { path = "../lang/syn", features = ["idl", "init-if-needed"] }
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
huione-sdk = { path = "../../huione/sdk", version = "1.1.0" }
huione-program = { path = "../../huione/sdk/program", version = "1.1.0" }
huione-client =  { path = "../../huione/client", version = "1.1.0" } 
huione-cli-config =  { path = "../../huione/cli-config", version = "1.1.0" } 
huione-faucet=  { path = "../../huione/faucet", version = "1.1.0" } 
dirs = "3.0"
heck = "0.3.1"
flate2 = "1.0.19"
rand = "0.7.3"
tar = "0.4.35"
reqwest = { version = "0.11.4", features = ["multipart", "blocking"] }
tokio = "1.0"
pathdiff = "0.2.0"
cargo_toml = "0.15.3"
walkdir = "2.3.2"
chrono = "0.4.19"
portpicker = "0.1.1"
