[package]
name = "huione-anchor-syn"
version = "0.1.0"
authors = ["HUIONE Foundation <foundation@huione.com>"]
repository = "https://github.com/huione/anchor"
license = "Apache-2.0"
description = "Anchor syntax parsing and code generation tools"
rust-version = "1.68.0"
edition = "2021"

[features]
init-if-needed = []
idl = []
hash = []
default = []
anchor-debug = []
seeds = []

[dependencies]
proc-macro2 = { version = "1.0.59", features=["span-locations"]}
proc-macro2-diagnostics = "0.9"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }
anyhow = "1.0.71"
heck = "0.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
sha2 = "0.10.6"
thiserror = "1.0.40"
bs58 = "0.4.0"
