[package]
name = "huione-anchor-attribute-interface"
version = "0.1.0"
authors = ["HUIONE Foundation <foundation@huione.com>"]
repository = "https://github.com/huione/anchor"
license = "Apache-2.0"
description = "Attribute for defining a program interface trait"
rust-version = "1.68.0"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["huione-anchor-syn/anchor-debug"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["full"] }
anyhow = "1.0.32"
huione-anchor-syn = { path = "../../syn", version = "0.1.0" }
heck = "0.3.2"
