[package]
name = "basic-0"
version = "0.1.0"
description = "Created with Anchor"
rust-version = "1.68.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_0"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
huione-anchor-lang = { path = "../../../../../lang" }
